--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "typer>=0.12",
     "httpx>=0.27",        # doc fetching (LearnerAgent)
     "ruamel.yaml>=0.18",  # round-trip YAML for pattern/lesson files
+    "rich>=13.0",         # structured terminal output (progress bars, tables, panels)
 ]
 
 [project.scripts]
