--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "The Experienced Code Optimizer — agentic GPU kernel optimizer w
 requires-python = ">=3.11"
 dependencies = [
     "smolagents>=1.0",
-    "anthropic>=0.40",
+    "openai>=1.0",
     "torch>=2.0",
     "triton>=3.0",
     "nvidia-ml-py>=12.0",
